tests/sema/negative/unknown_enum_member.nv
enum Color {
    Red;
}

fn main() : void {
    let c : Color = Color.Blue;
    return;
}
